Deploy-Service-Ingress/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  #namespace: production
spec:
  selector:
    app: frontend
  ports:
    - port: 8085   # expose 8080
      targetPort: 8085
  type: ClusterIP
