Deploy-Service-Ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  #namespace: production
  #annotations:
  #  kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    #- host: "" # Change to your DNS name
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8085
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8086
